# serializer version: 1
# name: test_all_entities[AC0950-status1][fan.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'auto',
        'turbo',
        'medium',
        'sleep',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': <ICON.FAN_SPEED_BUTTON: 'pap:fan_speed_button'>,
    'original_name': None,
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'pap',
    'unique_id': 'AC0950-ABCD1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC0950-status1][fan.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <FanAttributes.DEVICE_ID: 'device_id'>: 'NEW2DEVICE12345',
      'friendly_name': 'Living Room',
      'icon': <ICON.FAN_SPEED_BUTTON: 'pap:fan_speed_button'>,
      <FanAttributes.MODEL_ID: 'model_id'>: 'AC0950/10',
      <FanAttributes.NAME: 'name'>: 'Office',
      'percentage': None,
      'percentage_step': 33.333333333333336,
      'preset_mode': None,
      'preset_modes': list([
        'auto',
        'turbo',
        'medium',
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 57>,
      <FanAttributes.WIFI_VERSION: 'wifi_version'>: 'AWS_Philips_AIR_Combo@1.0.0',
    }),
    'context': <ANY>,
    'entity_id': 'fan.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[AC0950-status1][light.living_room_display_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'auto',
      ]),
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.living_room_display_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display backlight',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': <FanAttributes.DISPLAY_BACKLIGHT: 'display_backlight'>,
    'unique_id': 'AC0950-ABCD1234567890-d03105#1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC0950-status1][light.living_room_display_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'effect': None,
      'effect_list': list([
        'auto',
      ]),
      'friendly_name': 'Living Room Display backlight',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
    }),
    'context': <ANY>,
    'entity_id': 'light.living_room_display_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[AC0950-status1][select.living_room_preferred_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        <FanAttributes.INDOOR_ALLERGEN_INDEX: 'indoor_allergen_index'>,
        <FanAttributes.PM25: 'pm25'>,
        <FanAttributes.GAS: 'gas_level'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.living_room_preferred_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Preferred index',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.PREFERRED_INDEX: 'preferred_index'>,
    'unique_id': 'AC0950-ABCD1234567890-d0312a#2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC0950-status1][select.living_room_preferred_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Preferred index',
      'options': list([
        <FanAttributes.INDOOR_ALLERGEN_INDEX: 'indoor_allergen_index'>,
        <FanAttributes.PM25: 'pm25'>,
        <FanAttributes.GAS: 'gas_level'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.living_room_preferred_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[AC0950-status1][select.living_room_timer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Off',
        '1h',
        '2h',
        '3h',
        '4h',
        '5h',
        '6h',
        '7h',
        '8h',
        '9h',
        '10h',
        '11h',
        '12h',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.living_room_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Timer',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.TIMER: 'timer'>,
    'unique_id': 'AC0950-ABCD1234567890-d03110#2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC0950-status1][select.living_room_timer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Timer',
      'options': list([
        'Off',
        '1h',
        '2h',
        '3h',
        '4h',
        '5h',
        '6h',
        '7h',
        '8h',
        '9h',
        '10h',
        '11h',
        '12h',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.living_room_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[AC0950-status1][sensor.living_room_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_room_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'PM2.5',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.PM25: 'pm25'>,
    'unique_id': 'AC0950-ABCD1234567890-pm25',
    'unit_of_measurement': 'μg/m³',
  })
# ---
# name: test_all_entities[AC0950-status1][sensor.living_room_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Living Room PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'μg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_room_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_all_entities[AC0950-status1][switch.living_room_beep-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.living_room_beep',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Beep',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.BEEP: 'beep'>,
    'unique_id': 'AC0950-ABCD1234567890-d03130',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC0950-status1][switch.living_room_beep-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Beep',
    }),
    'context': <ANY>,
    'entity_id': 'switch.living_room_beep',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[AC0950-status1][switch.living_room_child_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.living_room_child_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Child lock',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.CHILD_LOCK: 'child_lock'>,
    'unique_id': 'AC0950-ABCD1234567890-d03103',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC0950-status1][switch.living_room_child_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Child lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.living_room_child_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[AC1715-status2][fan.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'auto',
        'speed_1',
        'speed_2',
        'turbo',
        'sleep',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'pap:auto_mode_button',
    'original_name': None,
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'pap',
    'unique_id': 'AC1715-ABCD1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC1715-status2][fan.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <FanAttributes.DEVICE_ID: 'device_id'>: 'NEWDEVICE123456',
      'friendly_name': 'Living Room',
      'icon': 'pap:auto_mode_button',
      <FanAttributes.MODEL_ID: 'model_id'>: 'AC1715/10',
      <FanAttributes.NAME: 'name'>: 'Bedroom',
      'percentage': None,
      'percentage_step': 25.0,
      'preset_mode': 'auto',
      'preset_modes': list([
        'auto',
        'speed_1',
        'speed_2',
        'turbo',
        'sleep',
      ]),
      'supported_features': <FanEntityFeature: 57>,
      <FanAttributes.WIFI_VERSION: 'wifi_version'>: 'AWS_Philips_AIR@2.0.0',
    }),
    'context': <ANY>,
    'entity_id': 'fan.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[AC1715-status2][light.living_room_display_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.living_room_display_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display backlight',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.DISPLAY_BACKLIGHT: 'display_backlight'>,
    'unique_id': 'AC1715-ABCD1234567890-d03-05',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC1715-status2][light.living_room_display_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Living Room Display backlight',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.living_room_display_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[AC1715-status2][select.living_room_preferred_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        <FanAttributes.INDOOR_ALLERGEN_INDEX: 'indoor_allergen_index'>,
        <FanAttributes.PM25: 'pm25'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.living_room_preferred_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Preferred index',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.PREFERRED_INDEX: 'preferred_index'>,
    'unique_id': 'AC1715-ABCD1234567890-d03-42',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC1715-status2][select.living_room_preferred_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Preferred index',
      'options': list([
        <FanAttributes.INDOOR_ALLERGEN_INDEX: 'indoor_allergen_index'>,
        <FanAttributes.PM25: 'pm25'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.living_room_preferred_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[AC1715-status2][sensor.living_room_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_room_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'PM2.5',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.PM25: 'pm25'>,
    'unique_id': 'AC1715-ABCD1234567890-pm25',
    'unit_of_measurement': 'μg/m³',
  })
# ---
# name: test_all_entities[AC1715-status2][sensor.living_room_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Living Room PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'μg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_room_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_all_entities[AC3033-status0][fan.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'auto',
        'sleep',
        'sleep_allergy',
        'speed_1',
        'speed_2',
        'turbo',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'pap:auto_mode_button',
    'original_name': None,
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'pap',
    'unique_id': 'AC3033-ABCD1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC3033-status0][fan.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <FanAttributes.DEVICE_ID: 'device_id'>: 'ABCD1234567890',
      'friendly_name': 'Living Room',
      'icon': 'pap:auto_mode_button',
      <FanAttributes.MODEL_ID: 'model_id'>: 'AC3033/10',
      <FanAttributes.NAME: 'name'>: 'Living Room',
      'percentage': None,
      'percentage_step': 25.0,
      'preset_mode': 'auto',
      'preset_modes': list([
        'auto',
        'sleep',
        'sleep_allergy',
        'speed_1',
        'speed_2',
        'turbo',
      ]),
      'supported_features': <FanEntityFeature: 57>,
      <FanAttributes.WIFI_VERSION: 'wifi_version'>: 'AWS_Philips_AIR@1.0.0',
    }),
    'context': <ANY>,
    'entity_id': 'fan.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[AC3033-status0][light.living_room_display_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.living_room_display_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display backlight',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.DISPLAY_BACKLIGHT: 'display_backlight'>,
    'unique_id': 'AC3033-ABCD1234567890-uil',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC3033-status0][light.living_room_display_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': None,
      'friendly_name': 'Living Room Display backlight',
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.living_room_display_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[AC3033-status0][light.living_room_light_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'light.living_room_light_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Light brightness',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.LIGHT_BRIGHTNESS: 'light_brightness'>,
    'unique_id': 'AC3033-ABCD1234567890-aqil',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC3033-status0][light.living_room_light_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'friendly_name': 'Living Room Light brightness',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.living_room_light_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[AC3033-status0][select.living_room_preferred_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        <FanAttributes.INDOOR_ALLERGEN_INDEX: 'indoor_allergen_index'>,
        <FanAttributes.PM25: 'pm25'>,
        <FanAttributes.GAS: 'gas_level'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.living_room_preferred_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Preferred index',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.PREFERRED_INDEX: 'preferred_index'>,
    'unique_id': 'AC3033-ABCD1234567890-ddp#2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC3033-status0][select.living_room_preferred_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Preferred index',
      'options': list([
        <FanAttributes.INDOOR_ALLERGEN_INDEX: 'indoor_allergen_index'>,
        <FanAttributes.PM25: 'pm25'>,
        <FanAttributes.GAS: 'gas_level'>,
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.living_room_preferred_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[AC3033-status0][sensor.living_room_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_room_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.HUMIDITY: 'humidity'>,
    'unique_id': 'AC3033-ABCD1234567890-rh',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[AC3033-status0][sensor.living_room_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Living Room Humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_room_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '45',
  })
# ---
# name: test_all_entities[AC3033-status0][sensor.living_room_indoor_allergen_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_room_indoor_allergen_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Indoor allergen index',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.INDOOR_ALLERGEN_INDEX: 'indoor_allergen_index'>,
    'unique_id': 'AC3033-ABCD1234567890-iaql',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC3033-status0][sensor.living_room_indoor_allergen_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Indoor allergen index',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_room_indoor_allergen_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[AC3033-status0][sensor.living_room_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_room_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'PM2.5',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.PM25: 'pm25'>,
    'unique_id': 'AC3033-ABCD1234567890-pm25',
    'unit_of_measurement': 'μg/m³',
  })
# ---
# name: test_all_entities[AC3033-status0][sensor.living_room_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Living Room PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'μg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_room_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15',
  })
# ---
# name: test_all_entities[AC3033-status0][sensor.living_room_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.living_room_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer',
    'original_name': 'Temperature',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.TEMPERATURE: 'temperature'>,
    'unique_id': 'AC3033-ABCD1234567890-temp',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[AC3033-status0][sensor.living_room_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Living Room Temperature',
      'icon': 'mdi:thermometer',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.living_room_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22',
  })
# ---
# name: test_all_entities[AC3033-status0][switch.living_room_child_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.living_room_child_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Child lock',
    'platform': 'philips_airpurifier_coap',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <FanAttributes.CHILD_LOCK: 'child_lock'>,
    'unique_id': 'AC3033-ABCD1234567890-cl',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[AC3033-status0][switch.living_room_child_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living Room Child lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.living_room_child_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
